[gd_scene load_steps=7 format=3 uid="uid://blunk5ciybxjb"]

[ext_resource type="Script" path="res://assets/image/tilemap/title.gd" id="1_43dad"]
[ext_resource type="PackedScene" uid="uid://b5iuql5yywxxj" path="res://assets/image/tilemap/title_map.tscn" id="1_n5vg3"]
[ext_resource type="FontFile" uid="uid://b7kj4m31ra5rw" path="res://assets/fonts/Kenney Mini.ttf" id="2_pjps4"]
[ext_resource type="Texture2D" uid="uid://ct6edeji862r3" path="res://assets/image/logo gda 55 flat min.png" id="3_fvalo"]
[ext_resource type="Texture2D" uid="uid://c8fwmd680hem6" path="res://assets/image/ships/ship_0002.png" id="4_o6ai2"]
[ext_resource type="PackedScene" uid="uid://gebkwwg62ksm" path="res://assets/image/tilemap/gda.tscn" id="5_q2xd6"]

[node name="Title" type="Node2D" node_paths=PackedStringArray("n_level_1_button", "n_aviones", "n_gda")]
script = ExtResource("1_43dad")
n_level_1_button = NodePath("Level1")
n_aviones = NodePath("Sprite2D")
n_gda = NodePath("GDA")

[node name="TitleMap" parent="." instance=ExtResource("1_n5vg3")]
z_index = -2

[node name="Label" type="Label" parent="."]
offset_left = 83.0
offset_top = 2.0
offset_right = 289.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("2_pjps4")
theme_override_font_sizes/font_size = 40
text = "Aviones"

[node name="Level1" type="Button" parent="."]
offset_left = 50.0
offset_top = 91.0
offset_right = 110.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_pjps4")
text = "Level1"

[node name="Exit" type="Button" parent="."]
offset_left = 50.0
offset_top = 128.0
offset_right = 98.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_pjps4")
text = "Exit"

[node name="LogoGDA" type="Button" parent="."]
offset_left = 244.0
offset_top = 208.0
offset_right = 407.0
offset_bottom = 266.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("3_fvalo")
flat = true
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(200, 125)
scale = Vector2(3, 3)
texture = ExtResource("4_o6ai2")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0, 0, 0, 0.529412)
z_index = -1
position = Vector2(2, 2)
texture = ExtResource("4_o6ai2")

[node name="GDA" parent="." instance=ExtResource("5_q2xd6")]

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="LogoGDA" to="." method="_on_logo_gda_pressed"]
